tenor_web/src/styles/globals.css
@tailwind base;
@tailwind components;
@tailwind utilities;

@layer base {
  .animate-shimmer{
    background: repeating-linear-gradient(
              90deg,
              #ffffff70 0%,
              #ffffffff 33.3%,
              #ffffff70 66.7%,
              #ffffffff 100%);
    background-size: 300% 100%;
    background-position: 0 0;
  
    /* Show gradient only inside glyphs */
    -webkit-background-clip: text;
            background-clip: text;
    color: transparent;
    -webkit-text-fill-color: transparent;
  
    animation: shimmer 1.5s linear infinite;
  }
  
  /* 2.  Motion: just slide the X‑position */
  @keyframes shimmer{
    0%   { background-position: 100%   0; }
    100% { background-position: 0% 0; }
  }
}

@layer utilities {
  /* Chrome, Safari and Opera */
  .no-scrollbar::-webkit-scrollbar {
    display: none;
  }

  .no-scrollbar {
    -ms-overflow-style: none; /* IE and Edge */
    scrollbar-width: none; /* Firefox */
  }
}

@layer components {
  .markdown-content ul,
  .markdown-content ol {
    list-style: inherit;
    padding-left: 1.5rem;
  }

  .markdown-content li {
    list-style: inherit;
  }

  .markdown-content {
    word-wrap: break-word;
    overflow-wrap: break-word;
    word-break: break-all;
  }
}

